--- a/templates/page.html
+++ b/templates/page.html
@@ -11,6 +11,7 @@
             <input type="submit" value="submit"/>
         </form>
         <div id="status"></div>
+        <progress value="0" max="100"></progress>
     </body>
 </html>
 
